<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/competition_primary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smk.iwomen.CompetitionSubmitAnswerActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_competition_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/competition_vertical_margin"
                android:text="Name of the game"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/competition_text" />

            <TextView
                android:id="@+id/txt_competition_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/competition_vertical_margin"
                android:text="Name of the game description..."
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/competition_text" />

            <EditText
                android:id="@+id/edt_competition_answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/competition_vertical_margin"
                android:background="@drawable/competition_answer_edittext"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/competition_answer_hit_1"
                android:inputType="textMultiLine"
                android:lines="3" >
            </EditText>

            <EditText
                android:id="@+id/edt_competition_answer_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/competition_answer_edittext"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/competition_answer_hit_2"
                android:inputType="textMultiLine"
                android:lines="3" />

            <EditText
                android:id="@+id/edt_competition_answer_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/competition_answer_edittext"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/competition_answer_hit_3"
                android:inputType="textMultiLine"
                android:lines="3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/competition_vertical_margin" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_competition_answer_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/competition_btn_take_challange"
                        android:text="@string/competition_save"
                        android:textColor="@color/competition_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/competition_save_desc"
                        android:textColor="@color/competition_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_competition_answer_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/competition_btn_take_challange"
                        android:text="@string/competition_submit"
                        android:textColor="@color/competition_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/competition_submit_desc"
                        android:textColor="@color/competition_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <Button
                        android:id="@+id/btn_competition_group_answers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/competition_btn_take_challange"
                        android:text="@string/competition_group_answer"
                        android:textColor="@color/competition_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/competition_group_answer_desc"
                        android:textColor="@color/competition_text" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
