<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        >

        <include layout="@layout/toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_dropshawdow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/edit_profile_tlg_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <org.undp_iwomen.iwomen.ui.widget.CustomTextView
                android:id="@+id/edit_profile_tlg_checkbox_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:text="@string/signup_tlg_member_exit"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <org.undp_iwomen.iwomen.ui.widget.CustomTextView
                android:id="@+id/edit_profile_tlg_lbl_township"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingBottom="@dimen/com_parse_ui_horizontal_margin"
                android:paddingLeft="3dp"
                android:paddingTop="@dimen/com_parse_ui_horizontal_margin"
                android:text="@string/edit_profile_tlg_township"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/edit_profile_tlg_spn_township"
                style="@style/Spinner.TownshipInfo"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:enabled="false"
                android:text="@string/com_parse_ui_signup_township_lbl_eng" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/edit_profile_tlg_ly_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/competition_text"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <org.undp_iwomen.iwomen.ui.widget.CustomButton
            android:id="@+id/edit_profile_tlg_btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lime_500"

            android:text="@string/competition_save"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <org.undp_iwomen.iwomen.ui.widget.CustomButton
            android:id="@+id/edit_profile_tlg_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_weight="1"
            android:background="@color/lime_500"

            android:text="@string/edit_profile_btn_cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>