<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:scrollbars="none"
    android:background="@color/white"
    tools:context="org.undp_iwomen.iwomen.ui.fragment.StoriesFragment">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:background="@drawable/bg_parent_rounded_corner_grey">

        <EditText
            android:id="@+id/new_post_et_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/new_post_hint_title_eng"
            android:inputType="textMultiLine"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_parent_rounded_corner_grey"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/new_post_et_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/new_post_hint_body_eng"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="bottom"
            android:orientation="horizontal">
        <TextView

            android:layout_gravity="right"
            android:id="@+id/character_count_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"



            android:text="@string/character_count_placeholder"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingRight="@dimen/activity_vertical_margin" />
            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_parent_rounded_corner_grey"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_post_camera_img_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:background="@mipmap/ic_camera_alt_grey600_36dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_post_txt_img_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_post_upload_photo_eng"
                android:paddingTop="10dp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fy_photo"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">

        <org.undp_iwomen.iwomen.ui.widget.ResizableImageView
            android:id="@+id/new_post_img"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:visibility="gone"
            android:src="@drawable/snackbar_background" />

        <!--<ImageView
            android:id="@+id/img_camera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_camera_alt_grey600_36dp" />-->

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/new_post_photo_progress_wheel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center" />


    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_500"
            android:text="@string/new_post_eng"
            android:textColor="@color/white"
            android:id="@+id/new_post_btn" />
    </LinearLayout>
</LinearLayout>
    </ScrollView>